# PPO_labs

./: .dockerignore  AuthServiceTests  BookingLibConfig.cmake  BookingTests  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DanceStudioTechUI  Dockerfile  IntegrationTests  LessonServiceTests  Makefile  README.md  ReviewServiceTests  SubscriptionServiceTests  TechUI  TestLogger  c_cpp_properties.json  cmake_install.cmake  dance_studio_backup.sql  docker-compose.db.yml  docker-compose.yml  styles.css  wait-for-bd.sh  wt_config.xml  wt_test
BookingLib/: readme.md
BookingLib/include/booking_core/: DatabaseConnection.hpp
BookingLib/include/data_access/: IBookingRepository.hpp  IBranchRepository.hpp  IClientRepository.hpp  IDanceHallRepository.hpp  ISubscriptionRepository.hpp  PostgreSQLRepositoryFactory.hpp  ResilientDatabaseConnection.hpp  SqlQueryBuilder.hpp
cmake/: BookingLibConfig.cmake.in
config/: config.json
scripts/: init_database.sql
src/: app_main.cpp  main.cpp  test_logger.cpp  test_mongo.cpp  ui_main.cpp  web_main.cpp  wt_test.cpp
src/config/: config.json  config.properties
src/core/: Config.cpp  Config.hpp  Logger.cpp  PasswordHasher.cpp  PasswordHasher.hpp
src/data/: DataMigrator.cpp  DataMigrator.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  DateTimeUtils.cpp  DateTimeUtils.hpp  IRepositoryFactory.hpp  MongoDBGlobalInstance.cpp  MongoDBGlobalInstance.hpp  MongoDBRepositoryFactory.cpp  MongoDBRepositoryFactory.hpp  PostgreSQLRepositoryFactory.cpp  PostgreSQLRepositoryFactory.hpp  QueryFactory.cpp  QueryFactory.hpp  RepositoryFactoryCreator.hpp  ResilientDatabaseConnection.cpp  SqlQueryBuilder.cpp  SqlQueryBuilder.hpp
src/data/exceptions/: DataAccessException.hpp
src/dtos/: AuthDTO.cpp  AuthDTO.hpp  AuthResultDTO.hpp  BookingDTO.cpp  BookingDTO.hpp  EnrollmentDTO.cpp  EnrollmentDTO.hpp  PasswordDTO.hpp  ReviewDTO.cpp  ReviewDTO.hpp  ScheduleDTO.cpp  ScheduleDTO.hpp  SubscriptionDTO.hpp
src/models/: Address.cpp  Address.hpp  Attendance.cpp  Attendance.hpp  Booking.cpp  Booking.hpp  Branch.cpp  Branch.hpp  Client.cpp  Client.hpp  DanceHall.cpp  DanceHall.hpp  Enrollment.cpp  Enrollment.hpp  Hall.cpp  Hall.hpp  Lesson.cpp  Lesson.hpp  Review.cpp  Review.hpp  Schedule.cpp  Schedule.hpp  Studio.cpp  Studio.hpp  Subscription.cpp  SubscriptionType.cpp  SubscriptionType.hpp  TimeSlot.cpp  TimeSlot.hpp  Trainer.cpp
src/repositories/: IAttendanceRepository.hpp  IBookingRepository.hpp  IClientRepository.hpp  IDanceHallRepository.hpp  IEnrollmentRepository.hpp  IHallRepository.hpp  ILessonRepository.hpp  IReviewRepository.hpp  IStudioRepository.hpp  ISubscriptionRepository.hpp  ITrainerRepository.hpp
src/repositories/impl/: MongoDBAttendanceRepository.cpp  MongoDBAttendanceRepository.hpp  MongoDBBookingRepository.cpp  MongoDBBookingRepository.hpp  MongoDBBranchRepository.cpp  MongoDBBranchRepository.hpp  MongoDBClientRepository.cpp  MongoDBClientRepository.hpp  MongoDBDanceHallRepository.cpp  MongoDBDanceHallRepository.hpp  MongoDBEnrollmentRepository.cpp  MongoDBEnrollmentRepository.hpp  MongoDBLessonRepository.cpp  MongoDBLessonRepository.hpp  MongoDBReviewRepository.cpp  MongoDBReviewRepository.hpp  MongoDBStudioRepository.cpp  MongoDBStudioRepository.hpp  MongoDBSubscriptionRepository.cpp  MongoDBSubscriptionRepository.hpp  MongoDBSubscriptionTypeRepository.cpp  MongoDBSubscriptionTypeRepository.hpp  MongoDBTrainerRepository.cpp  MongoDBTrainerRepository.hpp  PostgreSQLAttendanceRepository.cpp  PostgreSQLAttendanceRepository.hpp  PostgreSQLBookingRepository.cpp  PostgreSQLBookingRepository.hpp  PostgreSQLBranchRepository.cpp  PostgreSQLBranchRepository.hpp  PostgreSQLClientRepository.cpp  PostgreSQLClientRepository.hpp  PostgreSQLDanceHallRepository.cpp  PostgreSQLDanceHallRepository.hpp  PostgreSQLEnrollmentRepository.cpp  PostgreSQLEnrollmentRepository.hpp  PostgreSQLHallRepository.hpp  PostgreSQLLessonRepository.cpp  PostgreSQLLessonRepository.hpp  PostgreSQLReviewRepository.cpp  (+9 more)
src/scripts/: init_database.sql  insert_data.sql
src/services/: AttendanceService.cpp  AttendanceService.hpp  AuthService.cpp  AuthService.hpp  BookingService.cpp  BookingService.hpp  BranchService.cpp  BranchService.hpp  DatabaseHealthService.cpp  DatabaseHealthService.hpp  DatabaseMonitorService.cpp  DatabaseMonitorService.hpp  EnrollmentService.cpp  EnrollmentService.hpp  IAttendanceService.hpp  IBranchService.hpp  LessonService.cpp  LessonService.hpp  ReviewService.cpp  ScheduleService.cpp  ScheduleService.hpp  StatisticsService.cpp  StatisticsService.hpp  SubscriptionService.cpp  TimeZoneService.cpp  TimeZoneService.hpp
src/services/exceptions/: BookingException.hpp  EnrollmentException.hpp  LessonException.hpp  ValidationException.hpp
src/tech_ui/: InputHandlers.cpp  InputHandlers.hpp  StatisticsManager.cpp  StatisticsManager.hpp  TechUI.cpp  TechUI.hpp  TechUIManagers.cpp  TechUIManagers.hpp
src/tests/: BookingServiceTest.cpp
src/tests/integration/: RepositoryIntegrationTests.cpp
src/tests/mocks/: MockBookingRepository.hpp  MockClientRepository.hpp  MockHallRepository.hpp
src/tests/unit/: AuthServiceTest.cpp  BookingServiceTest.cpp  LessonServiceTest.cpp  ReviewServiceTest.cpp  SubscriptionServiceTest.cpp
src/types/: enums.cpp  enums.hpp  uuid.cpp  uuid.hpp
src/web_ui/: WebApplication.cpp  WebApplication.hpp  styles.css
src/web_ui/controllers/: AuthController.cpp  AuthController.hpp  BookingController.cpp  BookingController.hpp  LessonController.cpp  LessonController.hpp  SubscriptionController.cpp  SubscriptionController.hpp
src/web_ui/models/: UserSession.cpp  UserSession.hpp
src/web_ui/styles/: auth.css  booking.css  lesson.css  main.css  subscription.css
src/web_ui/templates/: main.html
src/web_ui/views/: AdminDashboard.cpp  AdminDashboard.hpp  BookingCreateWidget.cpp  BookingCreateWidget.hpp  BookingListWidget.cpp  BookingListWidget.hpp  BookingView.cpp  BookingView.hpp  ClientDashboard.cpp  ClientDashboard.hpp  EnrollmentHistoryWidget.cpp  EnrollmentHistoryWidget.hpp  LessonScheduleWidget.cpp  (+17 more)
(+41 files in other folders)
